# nakdimon-ort

./: .gitignore  BUILDING.md  LICENSE  README.md  config.json  export.py  infer.py  main.py  pyproject.toml  utils.py
.github/workflows/: publish.yml  test.yml
assets/: config.json
examples/: file.py  time.py  usage.py
nakdimon-rs/: Cargo.toml
nakdimon-rs/src/: config.rs  lib.rs  model.rs
nakdimon_ort/: __init__.py  config.json  config.py  model.py
scripts/: export.py  inference.py
test/: test_diacritics.py
test/files/: 3.txt  5.txt  6.txt  a.2.txt  a.3.txt  a.4.txt  dicta.1.txt  dicta.3.txt  dicta.4.txt
